@@ -18,11 +18,12 @@
 package cn.taketoday.context.properties.bind;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.Answers;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 
 import java.net.InetAddress;
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -30,10 +31,12 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import cn.taketoday.context.properties.bind.BinderTests.ExampleEnum;
 import cn.taketoday.context.properties.bind.BinderTests.JavaBean;
+import cn.taketoday.context.properties.bind.MapBinderTests.CustomMapWithoutDefaultCtor.CustomMap;
 import cn.taketoday.context.properties.source.ConfigurationPropertyName;
 import cn.taketoday.context.properties.source.ConfigurationPropertySource;
 import cn.taketoday.context.properties.source.MapConfigurationPropertySource;
@@ -49,8 +52,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.entry;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.assertArg;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 
@@ -77,7 +82,7 @@ class MapBinderTests {
 
   private final List<ConfigurationPropertySource> sources = new ArrayList<>();
 
-  private Binder binder = new Binder(this.sources);
+  private final Binder binder = new Binder(this.sources);
 
   @Test
   void bindToMapShouldReturnPopulatedMap() {
@@ -130,7 +135,8 @@ class MapBinderTests {
     source.put("faf.far.bin", "x");
     this.sources.add(source);
     Map<String, Map<String, Integer>> result = this.binder
-            .bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type)).get();
+            .bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type))
+            .get();
     assertThat(result).hasSize(2);
     assertThat(result.get("bar")).containsEntry("baz", 1).containsEntry("bin", 2);
     assertThat(result.get("far")).containsEntry("baz", 3).containsEntry("bin", 4);
@@ -184,9 +190,9 @@ class MapBinderTests {
     source.put("foo", "bar");
     this.sources.add(source);
     Map<String, Object> result = this.binder.bind("", Bindable.mapOf(String.class, Object.class)).get();
-    assertThat(result.get("commit")).isEqualTo(Collections.singletonMap("id", "abcdefg"));
-    assertThat(result.get("branch")).isEqualTo("master");
-    assertThat(result.get("foo")).isEqualTo("bar");
+    assertThat(result).containsEntry("commit", Collections.singletonMap("id", "abcdefg"));
+    assertThat(result).containsEntry("branch", "master");
+    assertThat(result).containsEntry("foo", "bar");
   }
 
   @Test
@@ -313,15 +319,13 @@ class MapBinderTests {
     TestPropertySourceUtils.addInlinedPropertiesToEnvironment(environment, "foo=boo");
     MockConfigurationPropertySource source = new MockConfigurationPropertySource("foo.aaa.bbb.ccc", "baz-${foo}");
     this.sources.add(source);
-    this.binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
-    Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-            .get();
+    Binder binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
+    Map<String, ExampleEnum> result = binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class)).get();
     assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.BAZ_BOO);
   }
 
   @Test
   void bindToMapWithNoPropertiesShouldReturnUnbound() {
-    this.binder = new Binder(this.sources);
     BindResult<Map<String, ExampleEnum>> result = this.binder.bind("foo",
             Bindable.mapOf(String.class, ExampleEnum.class));
     assertThat(result.isBound()).isFalse();
@@ -330,26 +334,25 @@ class MapBinderTests {
   @Test
   void bindToMapShouldTriggerOnSuccess() {
     this.sources.add(new MockConfigurationPropertySource("foo.bar", "1", "line1"));
-    BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+    BindHandler handler = mockBindHandler();
     Bindable<Map<String, Integer>> target = STRING_INTEGER_MAP;
     this.binder.bind("foo", target, handler);
     InOrder ordered = inOrder(handler);
-    ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)),
-            any(), eq(1));
+    ordered.verify(handler)
+            .onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)), any(), eq(1));
     ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
   }
 
   @Test
   void bindToMapStringArrayShouldTriggerOnSuccess() {
     this.sources.add(new MockConfigurationPropertySource("foo.bar", "a,b,c", "line1"));
-    BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+    BindHandler handler = mockBindHandler();
     Bindable<Map<String, String[]>> target = STRING_ARRAY_MAP;
     this.binder.bind("foo", target, handler);
     InOrder ordered = inOrder(handler);
-    ArgumentCaptor<String[]> array = ArgumentCaptor.forClass(String[].class);
-    ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)),
-            any(), array.capture());
-    assertThat(array.getValue()).containsExactly("a", "b", "c");
+    ordered.verify(handler)
+            .onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)), any(),
+                    assertArg((array) -> assertThat((String[]) array).containsExactly("a", "b", "c")));
     ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
   }
 
@@ -363,7 +366,7 @@ class MapBinderTests {
     source.put("foo.bar[2].value", "c");
     this.sources.add(source);
     Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-    List<String> values = map.get("bar").stream().map(JavaBean::getValue).collect(Collectors.toList());
+    List<String> values = map.get("bar").stream().map(JavaBean::getValue).toList();
     assertThat(values).containsExactly("a", "b", "c");
 
   }
@@ -428,7 +431,7 @@ class MapBinderTests {
     mockSource.put("foo.bar.baz[2].value", "c");
     this.sources.add(mockSource);
     Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-    List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).collect(Collectors.toList());
+    List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).toList();
     assertThat(values).containsExactly("a", "b", "c");
   }
 
@@ -502,8 +505,8 @@ class MapBinderTests {
     source.put("foo", "a,b");
     this.sources.add(source);
     Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-    assertThat(map.get("a")).isNotNull();
-    assertThat(map.get("b")).isNotNull();
+    assertThat(map).containsKey("a");
+    assertThat(map).containsKey("b");
   }
 
   @Test
@@ -518,8 +521,8 @@ class MapBinderTests {
     source.put("foo.b", "b");
     this.sources.add(source);
     Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-    assertThat(map.get("a")).isEqualTo("a");
-    assertThat(map.get("b")).isEqualTo("b");
+    assertThat(map).containsEntry("a", "a");
+    assertThat(map).containsEntry("b", "b");
   }
 
   @Test
@@ -558,7 +561,8 @@ class MapBinderTests {
     source.put("foo.items.a", "b");
     this.sources.add(source);
     ExampleCustomNoDefaultConstructorBean result = this.binder
-            .bind("foo", ExampleCustomNoDefaultConstructorBean.class).get();
+            .bind("foo", ExampleCustomNoDefaultConstructorBean.class)
+            .get();
     assertThat(result.getItems()).containsOnly(entry("foo", "bar"), entry("a", "b"));
   }
 
@@ -569,7 +573,8 @@ class MapBinderTests {
     source.put("foo.items.a", "b");
     this.sources.add(source);
     ExampleCustomWithDefaultConstructorBean result = this.binder
-            .bind("foo", ExampleCustomWithDefaultConstructorBean.class).get();
+            .bind("foo", ExampleCustomWithDefaultConstructorBean.class)
+            .get();
     assertThat(result.getItems()).containsExactly(entry("a", "b"));
   }
 
@@ -580,7 +585,8 @@ class MapBinderTests {
     source.put("foo.values.e", "f");
     this.sources.add(source);
     Map<String, String> result = this.binder
-            .bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b"))).get();
+            .bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b")))
+            .get();
     assertThat(result).hasSize(3);
     assertThat(result).containsExactly(entry("a", "b"), entry("c", "d"), entry("e", "f"));
   }
@@ -620,6 +626,18 @@ class MapBinderTests {
     assertThat(map).containsKey("bcd");
   }
 
+  @Test
+  void bindToCustomMapWithoutCtorAndConverterShouldResolve() {
+    DefaultConversionService conversionService = new DefaultConversionService();
+    conversionService.addConverter(new CustomMapConverter());
+    MockConfigurationPropertySource source = new MockConfigurationPropertySource();
+    source.put("foo.custom-map", "value");
+    this.sources.add(source);
+    Binder binder = new Binder(this.sources, null, conversionService, null);
+    CustomMapWithoutDefaultCtor result = binder.bind("foo", Bindable.of(CustomMapWithoutDefaultCtor.class)).get();
+    assertThat(result.getCustomMap().getSource()).isEqualTo("value");
+  }
+
   private <K, V> Bindable<Map<K, V>> getMapBindable(Class<K> keyGeneric, ResolvableType valueType) {
     ResolvableType keyType = ResolvableType.forClass(keyGeneric);
     return Bindable.of(ResolvableType.forClassWithGenerics(Map.class, keyType, valueType));
@@ -627,6 +645,14 @@ class MapBinderTests {
 
   private <T> Bindable<List<T>> getListBindable(ResolvableType type) {
     return Bindable.of(ResolvableType.forClassWithGenerics(List.class, type));
+  }
+
+  private BindHandler mockBindHandler() {
+    BindHandler handler = mock(BindHandler.class);
+    given(handler.onStart(any(), any(), any())).willAnswer(InvocationArgument.index(1));
+    given(handler.onCreate(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+    given(handler.onSuccess(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+    return handler;
   }
 
   static class Foo {
@@ -652,7 +678,7 @@ class MapBinderTests {
 
   static class NestableFoo {
 
-    private Map<String, NestableFoo> foos = new LinkedHashMap<>();
+    private final Map<String, NestableFoo> foos = new LinkedHashMap<>();
 
     private String value;
 
@@ -694,7 +720,6 @@ class MapBinderTests {
 
   }
 
-  @SuppressWarnings("serial")
   static class MyCustomNoDefaultConstructorMap extends HashMap<String, String> {
 
     MyCustomNoDefaultConstructorMap(Map<String, String> items) {
@@ -705,7 +730,7 @@ class MapBinderTests {
 
   static class ExampleCustomWithDefaultConstructorBean {
 
-    private MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
+    private final MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
 
     MyCustomWithDefaultConstructorMap getItems() {
       return this.items;
@@ -718,7 +743,6 @@ class MapBinderTests {
 
   }
 
-  @SuppressWarnings("serial")
   static class MyCustomWithDefaultConstructorMap extends HashMap<String, String> {
 
   }
@@ -747,6 +771,67 @@ class MapBinderTests {
 
     void setAddresses(Map<String, ? extends List<? extends InetAddress>> addresses) {
       this.addresses = addresses;
+    }
+
+  }
+
+  static class CustomMapWithoutDefaultCtor {
+
+    private final CustomMap customMap;
+
+    CustomMapWithoutDefaultCtor(CustomMap customMap) {
+      this.customMap = customMap;
+    }
+
+    CustomMap getCustomMap() {
+      return this.customMap;
+    }
+
+    static final class CustomMap extends AbstractMap<String, Object> {
+
+      private final String source;
+
+      CustomMap(String source) {
+        this.source = source;
+      }
+
+      @Override
+      public Set<Entry<String, Object>> entrySet() {
+        return Collections.emptySet();
+      }
+
+      String getSource() {
+        return this.source;
+      }
+
+    }
+
+  }
+
+  private static final class CustomMapConverter implements Converter<String, CustomMap> {
+
+    @Override
+    public CustomMap convert(String source) {
+      return new CustomMap(source);
+    }
+
+  }
+
+  private static final class InvocationArgument<T> implements Answer<T> {
+
+    private final int index;
+
+    private InvocationArgument(int index) {
+      this.index = index;
+    }
+
+    @Override
+    public T answer(InvocationOnMock invocation) throws Throwable {
+      return invocation.getArgument(this.index);
+    }
+
+    private static <T> InvocationArgument<T> index(int index) {
+      return new InvocationArgument<>(index);
     }
 
   }
